--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
-<project>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>root</groupId>
-    <version>1.0</version>
-    <artifactId>project</artifactId>
-    <packaging>pom</packaging>
-    <name>project</name>
-    <modules>
-    </modules>
+
+    <groupId>com.kokoro</groupId>
+    <artifactId>simple-anonymous-chat-room</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>simple-anonymous-chat-room</name>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -24,11 +24,11 @@
     </dependencies>
 
     <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
     </build>
-
-    <dependencyManagement>
-    </dependencyManagement>
-
-    <distributionManagement>
-    </distributionManagement>
 </project>
